fixed color contrast issues

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
 header {
 	padding: 1rem;
-	background-color: #458c5c;
+	background-color: #346A45;
 	width: 100%;
 }
 
@@ -37,12 +37,13 @@ h1 {
 	font-family: 'Rouge Script', cursive, serif;
 	font-size: 2rem;
 	text-align: center;
-	background-color: #458c5c;
+	background-color: #346A45;
 }
 
 .title-wrapper {
 	display: flex;
 	flex-wrap: wrap;
+	color: #fafacc;
 	max-width: 60%;
 	flex-direction: row;
 	justify-content: center;
@@ -78,7 +79,7 @@ nav a {
 #current-page {
 	cursor: pointer;
 	font-weight: 600;
-	color: hsl(0, 0%, 0%);
+	color: #ffffff;
 }
 
 #menu-icon {
@@ -152,7 +153,7 @@ main {
 }
 .button {
 	font-size: 1.2rem;
-	background-color: #458c5c;
+	background-color: #346A45;
 	color: #fafacc;
 	padding: 3px 8px;
 	border-radius: 10px;
@@ -275,7 +276,8 @@ button:active {
 }
 
 footer {
-	background-color: #458c5c;
+	color:#fafacc;
+	background-color: #346A45;
 	display: flex;
 	padding: 2rem;
 	justify-content: space-between;
@@ -284,6 +286,11 @@ footer {
 
 footer li {
 	font-size: 0.8rem;
+	
+}
+
+footer a{
+	color: #fafacc;
 }
 
 .footer-wrapper {
@@ -323,6 +330,7 @@ footer li {
 
 .contact-us a,
 .notes-content a {
+	color: #ffffff;
 	font-weight: 700;
 }
 
@@ -368,7 +376,7 @@ footer li {
 }
 
 .cart-table td {
-	border: 1px solid #458c5c;
+	border: 1px solid #346A45;
 }
 
 .cart-table,
@@ -381,7 +389,7 @@ footer li {
 
 .cart-table {
 	width: 90%;
-	border: 1px solid #458c5c;
+	border: 1px solid #346A45;
 	margin: 2rem auto;
 }
 .cart-table th,
@@ -403,7 +411,7 @@ footer li {
 
 #cart-table-title-row,
 #attributions-table-title-row {
-	background-color: #458c5c;
+	background-color: #346A45;
 }
 
 .attributions-table td:not(td:first-child) {
@@ -429,7 +437,7 @@ footer li {
 #total-row {
 	font-size: 1.2rem;
 	font-weight: 900;
-	background-color: #458c5c;
+	background-color: #346A45;
 }
 
 #total-row td {
@@ -480,7 +488,7 @@ form * {
 	padding: 0.5rem 1rem;
 }
 fieldset {
-	border: 1px solid #458c5c;
+	border: 1px solid #346A45;
 	border-radius: 1rem;
 }
 form label {
@@ -499,6 +507,7 @@ textarea {
 
 #contact-button {
 	margin-top: 1rem;
+	background-color: #346A45;
 }
 @media (min-width: 600px) {
 	header {
